@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2019-2022 LitterBox contributors
+ * Copyright (C) 2019-2024 LitterBox contributors
  *
  * This file is part of LitterBox.
  *
@@ -41,7 +41,6 @@ import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static com.google.common.truth.Truth.assertThat;
 
@@ -120,8 +119,8 @@ public class ControlDependenceGraphTest implements JsonTest {
         CFGNode entry = cfg.getEntryNode();
         CFGNode greenFlag = cfg.getSuccessors(entry).iterator().next();
         CFGNode ifelse = cfg.getSuccessors(greenFlag).stream().filter(t -> t.getASTNode() instanceof IfElseStmt).findFirst().get();
-        CFGNode move1 = cfg.getSuccessors(ifelse).stream().filter(t -> t.getASTNode() instanceof MoveSteps).collect(Collectors.toList()).get(0);
-        CFGNode move2 = cfg.getSuccessors(ifelse).stream().filter(t -> t.getASTNode() instanceof MoveSteps).collect(Collectors.toList()).get(1);
+        CFGNode move1 = cfg.getSuccessors(ifelse).stream().filter(t -> t.getASTNode() instanceof MoveSteps).toList().get(0);
+        CFGNode move2 = cfg.getSuccessors(ifelse).stream().filter(t -> t.getASTNode() instanceof MoveSteps).toList().get(1);
         CFGNode exit = cfg.getExitNode();
 
         assertThat(cdg.getEdges()).contains(EndpointPair.ordered(entry, exit));
@@ -142,7 +141,7 @@ public class ControlDependenceGraphTest implements JsonTest {
         CFGNode entry = cfg.getEntryNode();
         CFGNode greenFlag = cfg.getSuccessors(entry).stream().filter(t -> t.getASTNode() instanceof GreenFlag).findFirst().get();
         CFGNode move1 = cfg.getSuccessors(greenFlag).stream().filter(t -> t.getASTNode() instanceof MoveSteps).findFirst().get();
-        CFGNode keyPressed = cfg.getSuccessors(entry).stream().filter(t -> t.getASTNode() instanceof KeyPressed).collect(Collectors.toList()).get(0);
+        CFGNode keyPressed = cfg.getSuccessors(entry).stream().filter(t -> t.getASTNode() instanceof KeyPressed).toList().get(0);
         CFGNode move2 = cfg.getSuccessors(keyPressed).stream().filter(t -> t.getASTNode() instanceof MoveSteps).findFirst().get();
         CFGNode exit = cfg.getExitNode();
 
@@ -162,7 +161,7 @@ public class ControlDependenceGraphTest implements JsonTest {
 
         CFGNode entry = cfg.getEntryNode();
         CFGNode greenFlag = cfg.getSuccessors(entry).stream().filter(t -> t.getASTNode() instanceof GreenFlag).findFirst().get();
-        CFGNode createCloneOf = cfg.getSuccessors(greenFlag).stream().filter(t -> t.getASTNode() instanceof CreateCloneOf).collect(Collectors.toList()).get(0);
+        CFGNode createCloneOf = cfg.getSuccessors(greenFlag).stream().filter(t -> t.getASTNode() instanceof CreateCloneOf).toList().get(0);
         CFGNode move = cfg.getSuccessors(createCloneOf).stream().filter(t -> t.getASTNode() instanceof MoveSteps).findFirst().get();
         CFGNode clone = cfg.getSuccessors(createCloneOf).stream().filter(t -> t instanceof CloneEventNode).findFirst().get();
         CFGNode exit = cfg.getExitNode();
@@ -184,7 +183,7 @@ public class ControlDependenceGraphTest implements JsonTest {
         CFGNode entry = cfg.getEntryNode();
         CFGNode greenFlag = cfg.getSuccessors(entry).stream().filter(t -> t.getASTNode() instanceof GreenFlag).findFirst().get();
         CFGNode repeatTimes = cfg.getSuccessors(greenFlag).stream().filter(t -> t.getASTNode() instanceof RepeatTimesStmt).findFirst().get();
-        CFGNode createCloneOf = cfg.getSuccessors(repeatTimes).stream().filter(t -> t.getASTNode() instanceof CreateCloneOf).collect(Collectors.toList()).get(0);
+        CFGNode createCloneOf = cfg.getSuccessors(repeatTimes).stream().filter(t -> t.getASTNode() instanceof CreateCloneOf).toList().get(0);
         CFGNode move = cfg.getSuccessors(createCloneOf).stream().filter(t -> t.getASTNode() instanceof MoveSteps).findFirst().get();
         CFGNode clone = cfg.getSuccessors(createCloneOf).stream().filter(t -> t instanceof CloneEventNode).findFirst().get();
         CFGNode exit = cfg.getExitNode();
@@ -207,7 +206,7 @@ public class ControlDependenceGraphTest implements JsonTest {
 
         CFGNode entry = cfg.getEntryNode();
         CFGNode greenFlag = cfg.getSuccessors(entry).stream().filter(t -> t.getASTNode() instanceof GreenFlag).findFirst().get();
-        CFGNode createCloneOf = cfg.getSuccessors(greenFlag).stream().filter(t -> t.getASTNode() instanceof CreateCloneOf).collect(Collectors.toList()).get(0);
+        CFGNode createCloneOf = cfg.getSuccessors(greenFlag).stream().filter(t -> t.getASTNode() instanceof CreateCloneOf).toList().get(0);
         CFGNode clone = cfg.getSuccessors(createCloneOf).stream().filter(t -> t instanceof CloneEventNode).findFirst().get();
         CFGNode deleteClone = cfg.getSuccessors(clone).stream().filter(t -> t.getASTNode() instanceof DeleteClone).findFirst().get();
         CFGNode exit = cfg.getExitNode();
@@ -229,11 +228,11 @@ public class ControlDependenceGraphTest implements JsonTest {
         CFGNode entry = cfg.getEntryNode();
         CFGNode greenFlag = cfg.getSuccessors(entry).stream().filter(t -> t.getASTNode() instanceof GreenFlag).findFirst().get();
         CFGNode repeatTimes = cfg.getSuccessors(greenFlag).stream().filter(t -> t.getASTNode() instanceof RepeatTimesStmt).findFirst().get();
-        CFGNode broadcast = cfg.getSuccessors(repeatTimes).stream().filter(t -> t.getASTNode() instanceof Broadcast).collect(Collectors.toList()).get(0);
-        CFGNode say = cfg.getSuccessors(broadcast).stream().filter(t -> t.getASTNode() instanceof SayForSecs).collect(Collectors.toList()).get(0);
-        CFGNode move = cfg.getSuccessors(repeatTimes).stream().filter(t -> t.getASTNode() instanceof MoveSteps).collect(Collectors.toList()).get(0);
+        CFGNode broadcast = cfg.getSuccessors(repeatTimes).stream().filter(t -> t.getASTNode() instanceof Broadcast).toList().get(0);
+        CFGNode say = cfg.getSuccessors(broadcast).stream().filter(t -> t.getASTNode() instanceof SayForSecs).toList().get(0);
+        CFGNode move = cfg.getSuccessors(repeatTimes).stream().filter(t -> t.getASTNode() instanceof MoveSteps).toList().get(0);
         CFGNode message = cfg.getSuccessors(broadcast).stream().filter(t -> t instanceof MessageNode).findFirst().get();
-        CFGNode think = cfg.getSuccessors(message).stream().filter(t -> t.getASTNode() instanceof ThinkForSecs).collect(Collectors.toList()).get(0);
+        CFGNode think = cfg.getSuccessors(message).stream().filter(t -> t.getASTNode() instanceof ThinkForSecs).toList().get(0);
         CFGNode exit = cfg.getExitNode();
 
         assertThat(cdg.getEdges()).contains(EndpointPair.ordered(entry, exit));
